  * PgCommon.pm, user_cluster_map(): Print a meaningful error message instead
    of 'invalid symbolic link' gibberish if a cluster in user_clusters or
    .postgresqlrc does not exist.
  * pg_ctlcluster:
    - Exit with code 2 if the cluster is already (start)/not (stop) running
      and fix error messages to be consistent. (See bug #355004)
    - Document the exit codes in the POD.
  * debian/init.d-functions:
    - Use log_daemon_msg/log_progress_msg to show all clusters of a particular
      version on the same line, to better conform to standards.
    - Call restart instead of stop/start.
    - Do not fail if cluster is already (start)/not (stop) running to conform
      to LSB.
    - Thanks to Peter Eisentraut for the original patch.
    - Closes: #355004

 -- Martin Pitt <mpitt@debian.org>  Sun, 12 Mar 2006 09:57:57 +0100

postgresql-common (43) unstable; urgency=low

  * debian/postgresql-common.cron.d: Update documentation for 8.1 and correct
    paths in it. Closes: #351891
  * pg_createcluster: Fix typos in POD. Closes: #351835
  * debian/postgresql-common.dirs: Add /var/lib/postgresql to ensure that the
    postgres user always has an existant home directory. Closes: #351985
  * debian/supported-versions, lsb_debian(): Add 'testing'. Closes: #353754
  * PgCommon.pm, change_ugid():
    - Suppress warning on nonexistant user names.
    - Do not split group list at comma; getgrent already converts commas in
      /etc/groups to spaces, and splitting on commas breaks pam-ldap
      environments. Thanks to Chmouel Boudjnah.
    - Closes: #353674
  * pg_wrapper: Set PGSYSCONFDIR to /etc/postgresql-common if it is unset, to
    provide a sane default for the location of pg_service.conf.
    Closes: #353832
  * pg_dropcluster: Remove /etc/postgresql/<version> and
    /var/lib/postgresql/<version> if empty.
  * t/TestLib.pm: Added check_clean() method to test for empty PostgreSQL
    related directories and processes, and use it in all tests.